examples/example_android_opengl3/android/app/build/intermediates/cxx/RelWithDebInfo/616m1d5e/logs/arm64-v8a/build_stdout_ImGuiExample.txt
ninja: Entering directory `/home/user/hax/examples/example_android_opengl3/android/app/.cxx/RelWithDebInfo/616m1d5e/arm64-v8a'
[1/2] Building CXX object CMakeFiles/ImGuiExample.dir/main.cpp.o
FAILED: CMakeFiles/ImGuiExample.dir/main.cpp.o 
/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android21 --sysroot=/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/sysroot -DIMGUI_IMPL_OPENGL_ES3 -DImGuiExample_EXPORTS -I/home/user/hax/examples/example_android_opengl3/../.. -I/home/user/hax/examples/example_android_opengl3/../../backends -I/home/user/Sdk/ndk/27.2.12479018/sources/android/native_app_glue -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O2 -g -DNDEBUG -fPIC -std=c++11 -MD -MT CMakeFiles/ImGuiExample.dir/main.cpp.o -MF CMakeFiles/ImGuiExample.dir/main.cpp.o.d -o CMakeFiles/ImGuiExample.dir/main.cpp.o -c /home/user/hax/examples/example_android_opengl3/main.cpp
/home/user/hax/examples/example_android_opengl3/main.cpp:1:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
    1 | #include "imgui.h" include "imgui_impl_android.h" include 
      |                    ^
      |                    //
/home/user/hax/examples/example_android_opengl3/main.cpp:2:2: error: invalid preprocessing directive
    2 | #"imgui_impl_opengl3.h" include <android/log.h> include 
      |  ^
/home/user/hax/examples/example_android_opengl3/main.cpp:3:2: error: invalid preprocessing directive
    3 | #<android_native_app_glue.h> include <EGL/egl.h> include 
      |  ^
/home/user/hax/examples/example_android_opengl3/main.cpp:4:2: error: invalid preprocessing directive
    4 | #<GLES3/gl3.h> include <string> include <fstream> include <jni.h>
      |  ^
/home/user/hax/examples/example_android_opengl3/main.cpp:6:8: error: unknown type name 'EGLDisplay'
    6 | static EGLDisplay g_EglDisplay = EGL_NO_DISPLAY; static EGLSurface 
      |        ^
/home/user/hax/examples/example_android_opengl3/main.cpp:6:34: error: use of undeclared identifier 'EGL_NO_DISPLAY'
    6 | static EGLDisplay g_EglDisplay = EGL_NO_DISPLAY; static EGLSurface 
      |                                  ^
/home/user/hax/examples/example_android_opengl3/main.cpp:6:57: error: unknown type name 'EGLSurface'
    6 | static EGLDisplay g_EglDisplay = EGL_NO_DISPLAY; static EGLSurface 
      |                                                         ^
/home/user/hax/examples/example_android_opengl3/main.cpp:7:16: error: use of undeclared identifier 'EGL_NO_SURFACE'
    7 | g_EglSurface = EGL_NO_SURFACE; static EGLContext g_EglContext = 
      |                ^
/home/user/hax/examples/example_android_opengl3/main.cpp:7:39: error: unknown type name 'EGLContext'
    7 | g_EglSurface = EGL_NO_SURFACE; static EGLContext g_EglContext = 
      |                                       ^
/home/user/hax/examples/example_android_opengl3/main.cpp:8:1: error: use of undeclared identifier 'EGL_NO_CONTEXT'
    8 | EGL_NO_CONTEXT; static struct android_app* g_App = nullptr; static 
      | ^
/home/user/hax/examples/example_android_opengl3/main.cpp:9:36: error: use of undeclared identifier 'std'
    9 | bool g_Initialized = false; static std::string g_IniFilename = ""; 
      |                                    ^
/home/user/hax/examples/example_android_opengl3/main.cpp:11:1: error: use of undeclared identifier 'std'
   11 | std::ofstream logFile;
      | ^
/home/user/hax/examples/example_android_opengl3/main.cpp:13:22: error: use of undeclared identifier 'std'
   13 | void LogToFile(const std::string& message) { if (logFile.is_open()) { 
      |                      ^
/home/user/hax/examples/example_android_opengl3/main.cpp:14:31: error: use of undeclared identifier 'std'
   14 |         logFile << message << std::endl;
      |                               ^
/home/user/hax/examples/example_android_opengl3/main.cpp:21:43: error: unknown type name 'AInputEvent'
   21 | HandleInputEvent(struct android_app* app, AInputEvent* inputEvent);
      |                                           ^
/home/user/hax/examples/example_android_opengl3/main.cpp:24:28: error: use of undeclared identifier 'APP_CMD_INIT_WINDOW'
   24 |     switch (appCmd) { case APP_CMD_INIT_WINDOW:
      |                            ^
/home/user/hax/examples/example_android_opengl3/main.cpp:25:32: error: use of undeclared identifier 'APP_CMD_TERM_WINDOW'
   25 |         Init(app); break; case APP_CMD_TERM_WINDOW: Shutdown(); 
      |                                ^
/home/user/hax/examples/example_android_opengl3/main.cpp:29:58: error: unknown type name 'AInputEvent'
   29 | static int32_t HandleInputEvent(struct android_app* app, AInputEvent* 
      |                                                          ^
/home/user/hax/examples/example_android_opengl3/main.cpp:33:49: error: member access into incomplete type 'struct android_app'
   33 | void android_main(struct android_app* app) { app->onAppCmd = 
      |                                                 ^
/home/user/hax/examples/example_android_opengl3/main.cpp:8:31: note: forward declaration of 'android_app'
    8 | EGL_NO_CONTEXT; static struct android_app* g_App = nullptr; static 
      |                               ^
/home/user/hax/examples/example_android_opengl3/main.cpp:34:22: error: member access into incomplete type 'struct android_app'
   34 |     HandleAppCmd; app->onInputEvent = HandleInputEvent;
      |                      ^
/home/user/hax/examples/example_android_opengl3/main.cpp:8:31: note: forward declaration of 'android_app'
    8 | EGL_NO_CONTEXT; static struct android_app* g_App = nullptr; static 
      |                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
ninja: build stopped: subcommand failed.
